<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_light_gray"
    android:orientation="vertical"
    android:paddingTop="30dp"
    android:weightSum="1" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/vname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:paddingTop="10dp"
        android:text="@string/version"
        android:textColor="#888888"
        android:textSize="20sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/bg_light_gray" />

    <TextView
        android:id="@+id/about_update"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/version_update"
        android:textSize="18sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@drawable/bg_light_gray" />

    <TextView
        android:id="@+id/about_funtion"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/function_introduction"
        android:textSize="18sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@drawable/bg_light_gray" />

    <TextView
        android:id="@+id/about_feedback"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/feedback"
        android:textSize="18sp" />

</LinearLayout>