<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_light_gray" 
 >

    <RelativeLayout
          android:id="@+id/news_rl1"
       android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/tv01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/night_anti"
            android:textSize="17sp" />

        <Switch
            android:id="@+id/person_antiNoise_sw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
             />

    </RelativeLayout>

        <TextView
             android:id="@+id/person_antiNoise_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/news_rl1"
            android:background="@color/white"
            android:paddingBottom="8dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/night_anti_describe"
            android:textColor="@android:color/darker_gray"
            android:textSize="13sp" />
    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/person_antiNoise_tx"
        android:background="?android:attr/listDivider" />

<RelativeLayout
        android:id="@+id/rl3"
        android:layout_width="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/person_contentShow_tx"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:clickable="true"
        android:layout_height="50dp"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/tv03"
             android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/sound"
            android:textSize="17sp" />

        <Switch
            android:id="@+id/person_sound_sw"
             android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"  />
    </RelativeLayout>
      <View
        android:id="@+id/view2"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rl3"
        android:background="?android:attr/listDivider" />
      <RelativeLayout
       android:id="@+id/rl4"
        android:layout_width="wrap_content"
		android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/view2"
        android:background="@color/white"
        android:clickable="true"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"  >

        <TextView
            android:id="@+id/tv04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/vibrate"
            android:textSize="17sp" />

        <Switch
            android:id="@+id/person_vibrate_sw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"  />
    </RelativeLayout>
          <RelativeLayout
        android:id="@+id/rl5"
        android:layout_width="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rl4"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:clickable="true"
        android:layout_height="50dp"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"  >

        <TextView
            android:id="@+id/tv05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/still_receive"
            android:textSize="17sp" />

        <Switch
            android:id="@+id/person_stillReceive_sw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/news_rl2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/view1"
        android:background="@color/white"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp" >

        <Switch
            android:id="@+id/person_contentShow_sw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/tv02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/message_show"
            android:textSize="17sp" />
    </RelativeLayout>
<TextView
             android:id="@+id/person_contentShow_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/news_rl2"
            android:background="@color/white"
            android:paddingBottom="8dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/content_describe"
            android:textColor="@android:color/darker_gray"
            android:textSize="13sp" />
</RelativeLayout>