<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="6dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_inform"
        android:textSize="18sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/tv01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vibrate"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/person_vibrate_sw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/tv01" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="18sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/tv02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_vibrate"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/person_groupvibrate_sw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/tv02" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="18sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/tv03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/person_sound_sw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/tv03" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/tv04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_sound"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/person_groupSound_sw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/tv04" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/kind_sound"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:id="@+id/RelativeLaout05"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical" >

        <RadioGroup
            android:id="@+id/Rg05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/classical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="经典"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/dingdong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="叮咚"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/systemwarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="系统通知声"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="主题音"
                android:textSize="14sp" />
        </RadioGroup>
    </RelativeLayout>

</LinearLayout>