<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_light_gray" >

    <RelativeLayout
        android:id="@+id/rl3"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:clickable="true"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/tv03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/sound"
            android:textSize="17sp" />

        <Switch
            android:id="@+id/person_sound_sw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <View
        android:id="@+id/view22"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rl3"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:id="@+id/rl4"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/view22"
        android:background="@color/white"
        android:clickable="true"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/tv04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/vibrate"
            android:textSize="17sp" />

        <Switch
            android:id="@+id/person_vibrate_sw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

     <RelativeLayout
         android:id="@+id/person_newsInfor_rl"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="20dp"
         android:background="@color/white"
         android:clickable="true"
         android:gravity="center_vertical"
         android:paddingBottom="5dp"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:paddingTop="5dp"
         android:visibility="gone" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:text="@string/newInform"
            android:textSize="17sp" />
    </RelativeLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/person_newsInfor_rl"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:id="@+id/person_permisson_rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/view1"
        android:background="@color/white"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:visibility="gone" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:text="@string/permisson"
            android:textSize="17sp" />
    </RelativeLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/person_permisson_rl"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:id="@+id/person_common_rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/view2"
        android:background="@color/white"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:visibility="gone" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:text="@string/common"
            android:textSize="17sp" />
    </RelativeLayout> 

    <RelativeLayout
        android:id="@+id/person_about_rl"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rl4"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:clickable="true"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/about"
            android:textSize="17sp" />
    </RelativeLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/person_about_rl"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:id="@+id/person_finish_rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/view3"
        android:background="@color/white"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:text="@string/finish"
            android:textSize="17sp" />
    </RelativeLayout>

</RelativeLayout>